💄 top radius for code titles

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -94,7 +94,7 @@ const { Content, remarkPluginFrontmatter } = await post.render();
     @apply rounded bg-[var(--shiki-color-background)] shadow text-xs
 
     :global([data-rehype-pretty-code-title])
-      @apply bg-3 px-4 py-0.5 text-right text-2 shadow
+      @apply bg-3 px-4 py-0.5 text-right text-2 shadow rounded-t
 
     :global(pre)
       @apply p-4 overflow-x-auto
