--- a/src/components/post-card.astro
+++ b/src/components/post-card.astro
@@ -13,7 +13,7 @@ const { remarkPluginFrontmatter } = await post.render();
   href={`/blog/${post.slug}`}
   aria-label={`${post.data.title}. ${post.data.description}`}
   class={`group flex h-full flex-col gap-1 rounded-md bg-2 p-4 shadow
-          hover:bg-3 duration-200 motion-safe:transition-colors`}
+          hover:bg-3 motion-safe:transition-colors`}
 >
   <span class="group-hover:text-brand">{post.data.title}</span>
   <p class="font-1 text-2 text-xs">{post.data.description}</p>
