💬 remove static year in footer

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -67,7 +67,7 @@ const {
     <footer class="mx-auto flex flex-col items-center p-2 text-center text-xs">
       <Socials />
       <p class="mt-1 font-1">Powered by Astro on Vercel</p>
-      <p class="font-1">© 2023 Christian Penrod</p>
+      <p class="font-1">© {new Date().getFullYear()} Christian Penrod</p>
     </footer>
   </body>
 </html>
