🔍 add sitemap to head

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -37,6 +37,7 @@ const {
     <meta name="twitter:description" content={description} />
     <meta name="twitter:image" content={new URL(og, Astro.site)} />
     <link rel="icon" type="image/svg+xml" href={favicon.src} />
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <link href={new URL(Astro.url.pathname, Astro.site)} rel="canonical" />
     <script defer src="/_vercel/insights/script.js"></script>
   </head>
