--- a/src/pages/career.astro
+++ b/src/pages/career.astro
@@ -43,7 +43,7 @@ const roles = await getCollection('roles').then(async (roles) =>
 <style lang="scss">
   [data-role-content] {
     :global(p) {
-      @apply mt-3 max-w-[60ch] font-1 text-2;
+      @apply mt-3 max-w-[60ch] font-1 text-2 text-xs;
     }
 
     :global(h3) {
