--- a/src/components/github-card.astro
+++ b/src/components/github-card.astro
@@ -2,6 +2,7 @@
 import { Octokit } from '@octokit/rest';
 import type { CollectionEntry } from 'astro:content';
 import { Book, GitFork, Star } from 'lucide-preact';
+import { twJoin } from 'tailwind-merge';
 
 type Props = { repo: NonNullable<CollectionEntry<'posts'>['data']['repo']> };
 
@@ -16,8 +17,10 @@ const repo = await octokit.repos
   target="_blank"
   rel="nofollow noopener noreferrer"
   aria-label={`Check out the github repo: ${repo.name}. ${repo.description}`}
-  class={`group flex h-full flex-col gap-1 rounded-md bg-2 p-4 shadow
-          hover:bg-3 duration-200 motion-safe:transition-colors`}
+  class={twJoin(
+    'group flex h-full flex-col gap-1 rounded-md bg-2 p-4 shadow',
+    'hover:bg-3 duration-200 motion-safe:transition-colors',
+  )}
 >
   <div class="flex items-center gap-2 text-2">
     <Book class="h-4 w-4 shrink-0" />
