--- a/src/components/post-card.astro
+++ b/src/components/post-card.astro
@@ -1,6 +1,7 @@
 ---
 import type { CollectionEntry } from 'astro:content';
 import { Calendar, Clock } from 'lucide-preact';
+import { twJoin } from 'tailwind-merge';
 import Date from './date.astro';
 
 type Props = { post: CollectionEntry<'posts'> };
@@ -12,8 +13,10 @@ const { remarkPluginFrontmatter } = await post.render();
 <a
   href={`/blog/${post.slug}`}
   aria-label={`${post.data.title}. ${post.data.description}`}
-  class={`group flex h-full flex-col gap-1 rounded-md bg-2 p-4 shadow
-          hover:bg-3 motion-safe:transition-colors`}
+  class={twJoin(
+    'group flex h-full flex-col gap-1 rounded-md bg-2 p-4 shadow',
+    'hover:bg-3 motion-safe:transition-colors',
+  )}
 >
   <span class="group-hover:text-brand">{post.data.title}</span>
   <p class="font-1 text-2 text-xs">{post.data.description}</p>
