🎨 bump prettier printWidth

--- a/src/pages/career.astro
+++ b/src/pages/career.astro
@@ -24,8 +24,7 @@ const roles = await getCollection('roles').then(async (roles) =>
           <div class="rounded-md bg-2 p-6 shadow">
             <h2 class="font-normal text-brand text-lg">{role.company}</h2>
             <div class="font-1 text-2">
-              <Date>{role.start}</Date> -
-              {role.end ? <Date>{role.end}</Date> : 'Present'}
+              <Date>{role.start}</Date> - {role.end ? <Date>{role.end}</Date> : 'Present'}
             </div>
             <div class="relative">
               <div class="absolute bottom-1 top-5 w-2 rounded-md bg-brand opacity-30" />
