--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -70,16 +70,16 @@ const { Content, remarkPluginFrontmatter } = await post.render();
 
 <style lang="scss" is:global>
   :root {
-    --shiki-color-text: theme('textColor.2');
-    --shiki-color-background: #040404;
-    --shiki-token-constant: #777e96;
-    --shiki-token-string: #d3d5de;
-    --shiki-token-comment: #7c7c7c;
-    --shiki-token-keyword: #737c9a;
-    --shiki-token-parameter: #e2e4ed;
-    --shiki-token-function: #868690;
-    --shiki-token-string-expression: #a5a5e1;
-    --shiki-token-punctuation: #575861;
+    --shiki-color-text: #e2e4ed;
+    --shiki-color-background: #000000;
+    --shiki-token-constant: #969696;
+    --shiki-token-string: #b3b3b3;
+    --shiki-token-comment: #4e4e4e;
+    --shiki-token-keyword: #969696;
+    --shiki-token-parameter: #ffffff;
+    --shiki-token-function: #5f8787;
+    --shiki-token-string-expression: #b3b3b3;
+    --shiki-token-punctuation: #fff;
   }
 
   article p {
