--- a/src/components/post-card.astro
+++ b/src/components/post-card.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets';
 import type { CollectionEntry } from 'astro:content';
 import { CalendarIcon, Clock4Icon } from 'lucide-preact';
 import Separator from './ui/separator.astro';
@@ -13,10 +14,12 @@ const { remarkPluginFrontmatter } = await post.render();
 <a
   href={`/blog/${post.slug}`}
   aria-label={`${post.data.title}. ${post.data.description}`}
-  class="group flex h-full flex-col rounded border"
+  class="group flex h-full select-none flex-col overflow-hidden rounded border"
 >
-  <div class="h-28 rounded-t border-b opacity-20 grayscale group-hover:opacity-50"></div>
-  <div class="z-20 flex flex-col gap-2 bg-1 p-4">
+  <div class="h-28 rounded-t opacity-40 group-hover:opacity-60 motion-safe:transition-opacity">
+    <Image src={post.data.cover} alt="Post Cover" class="rounded-t" width={2048} height={2048} />
+  </div>
+  <div class="z-20 flex flex-col gap-2 border-t bg-1 p-4">
     <span class="group-hover:text-emphasis motion-safe:transition-colors">{post.data.title}</span>
     <p class="text-xs text-2">{post.data.description}</p>
     <Separator class="my-1.5" />
