✨ Begin blog page

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -55,7 +55,7 @@ const {
           </ul>
         </nav>
       </header>
-      <main class="flex-1"><slot /></main>
+      <main class="mb-fluid-6 flex-1"><slot /></main>
       <footer class="mx-auto w-full max-w-screen-lg">
         <Separator />
         <div class="flex justify-between px-2 pt-4 text-xxs text-2">
