✨ Blog posts page

--- a/src/components/post-card.astro
+++ b/src/components/post-card.astro
@@ -19,9 +19,9 @@ const { remarkPluginFrontmatter } = await post.render();
   <div class="h-28 rounded-t opacity-40 group-hover:opacity-60 motion-safe:transition-opacity">
     <Image src={post.data.cover} alt="Post Cover" class="rounded-t" width={2048} height={2048} />
   </div>
-  <div class="z-20 flex flex-col gap-2 border-t bg-1 p-4">
+  <div class="z-20 flex flex-1 flex-col gap-2 border-t bg-1 p-4">
     <span class="group-hover:text-emphasis motion-safe:transition-colors">{post.data.title}</span>
-    <p class="text-xs text-2">{post.data.description}</p>
+    <p class="flex-1 text-xs text-2">{post.data.description}</p>
     <Separator class="my-1.5" />
     <div class="flex justify-between gap-4 text-xxs text-2">
       <div class="flex items-center gap-2">
