--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -50,7 +50,7 @@ const {
         <span></span>
         <nav>
           <ul class="flex gap-6">
-            <li><Link href="/">Blog</Link></li>
+            <li><Link href="/blog">Blog</Link></li>
             <li><Link href="/">Career</Link></li>
           </ul>
         </nav>
@@ -64,7 +64,7 @@ const {
             <nav>
               <ul class="flex gap-4">
                 <li><Link href="/">Home</Link></li>
-                <li><Link href="/">Blog</Link></li>
+                <li><Link href="/blog">Blog</Link></li>
                 <li><Link href="/">Career</Link></li>
               </ul>
             </nav>
