--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -51,7 +51,7 @@ const {
         <nav>
           <ul class="flex gap-6">
             <li><Link href="/blog">Blog</Link></li>
-            <li><Link href="/">Career</Link></li>
+            <li><Link href="/career">Career</Link></li>
           </ul>
         </nav>
       </header>
@@ -65,7 +65,7 @@ const {
               <ul class="flex gap-4">
                 <li><Link href="/">Home</Link></li>
                 <li><Link href="/blog">Blog</Link></li>
-                <li><Link href="/">Career</Link></li>
+                <li><Link href="/career">Career</Link></li>
               </ul>
             </nav>
             <Separator orientation="vertical" class="h-5" />
