✨ more posts pagination | adjust scroll padding margin

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -15,7 +15,7 @@ const {
 } = Astro.props;
 ---
 
-<html lang="en" class="ml-[calc(100vw-100%)]">
+<html lang="en" class="ml-[calc(100vw-100%)] scroll-pt-10">
   <head>
     <title>{title}</title>
     <meta charset="utf-8" />
