--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -3,6 +3,7 @@ import PostBlockquote from '@/components/post-blockquote.astro';
 import PostCard from '@/components/post-card.astro';
 import PostCode from '@/components/post-code.astro';
 import PostSubheader from '@/components/post-subheader.astro';
+import GithubCard from '@/components/ui/github-card.astro';
 import Link from '@/components/ui/link.astro';
 import Separator from '@/components/ui/separator.astro';
 import Time from '@/components/ui/time.astro';
@@ -50,8 +51,9 @@ const { remarkPluginFrontmatter, Content } = await post.render();
         <Content
           components={{ a: Link, h2: PostSubheader, blockquote: PostBlockquote, figure: PostCode }}
         />
+        {post.data.repo && <GithubCard repo={post.data.repo} />}
       </div>
-      <Separator class="mb-20 mt-10" />
+      <Separator class="mb-16 mt-10" />
       <div class="flex flex-col gap-4">
         <h3 class="font-bold tracking-widest">MORE POSTS</h3>
         <div class="grid grid-cols-2 gap-10">
