--- a/src/pages/career.astro
+++ b/src/pages/career.astro
@@ -31,7 +31,7 @@ const roles = await getCollection('roles').then(async (roles) =>
       {
         roles.map(({ role, Content }) => (
           <div class="rounded border">
-            <div class="flex items-center justify-between border-b bg-2 px-4 py-2">
+            <div class="flex flex-col justify-between border-b bg-2 px-4 py-2 sm:flex-row sm:items-center">
               <Link href={role.link} class="uppercase tracking-wider">
                 {role.company}
               </Link>
