--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -32,7 +32,7 @@ const { remarkPluginFrontmatter, headings, Content } = await post.render();
 ---
 
 <Layout title={post.data.title} description={post.data.description}>
-  <div class="mx-auto mt-fluid-4 grid max-w-screen-lg grid-cols-[1fr,16rem] gap-10">
+  <div class="mx-auto mt-fluid-4 max-w-screen-lg lg:grid lg:grid-cols-[1fr,16rem] lg:gap-10">
     <article class="mx-auto max-w-prose">
       <div class="flex flex-col gap-2">
         <h1 class="text-lg font-bold uppercase tracking-widest">{post.data.title}</h1>
@@ -57,13 +57,13 @@ const { remarkPluginFrontmatter, headings, Content } = await post.render();
       <Separator class="mb-16 mt-10" />
       <div class="flex flex-col gap-4">
         <h3 class="font-bold tracking-widest">MORE POSTS</h3>
-        <div class="grid grid-cols-2 gap-10">
+        <div class="grid gap-x-10 gap-y-6 md:grid-cols-2">
           <PostCard post={prev} />
           <PostCard post={next} />
         </div>
       </div>
     </article>
-    <aside class="sticky top-10 flex h-max flex-col gap-4 rounded border">
+    <aside class="sticky top-10 hidden h-max flex-col gap-4 rounded border lg:flex">
       <div class="flex flex-col gap-3 px-4 pt-4">
         <h2 class="text-xs tracking-wider">TABLE OF CONTENTS</h2>
         <!-- prettier-ignore -->
