--- a/src/components/post-code.astro
+++ b/src/components/post-code.astro
@@ -18,7 +18,7 @@ import { twJoin } from 'tailwind-merge';
   <div
     class={twJoin(
       // base
-      'overflow-auto p-4 font-sans text-xxs',
+      'overflow-auto bg-[--shiki-color-background] p-4 font-sans text-xxs',
       // code
       '[&_code]:[counter-reset:line]',
       // line hightlighting
